--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,8 @@
 body{
 	margin: 0px;
-	
+	overflow: hidden;
+	--nav_height: 50px;
+
 }
 @font-face {
 	font-family: "test";
@@ -16,7 +18,6 @@ h1, h2, h3, h4, h5, h6{
 	color: white;
 }
 .upper_frame nav{
-	--nav_height: 50px;
 	height: var(--nav_height);
 	/* outline: 1px solid red; */
 	display: flex;
@@ -29,4 +30,42 @@ h1, h2, h3, h4, h5, h6{
 }
 nav .socials{
 	padding: 10px 5px;
+}
+#paralax_frame{
+	overflow-x: scroll;
+	overflow-y: hidden;
+	height: calc(100vh - var(--nav_height));
+}
+#paralax_frame::-webkit-scrollbar {
+	display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+#paralax_frame {
+	-ms-overflow-style: none;  /* IE and Edge */
+	scrollbar-width: none;  /* Firefox */
+	height: calc(100% - var(--nav_height));
+	perspective: 1px;
+	perspective-origin: top;
+}
+
+.mobile_nav{
+	display: flex;
+	justify-content: space-around;
+	width: 400vw;
+	transform: translateZ(-1.5px);
+}
+.mobile_nav h2{
+	transform: scale(2.5);
+
+}
+.container{
+	display: flex;
+	height: calc(100% - var(--nav_height));
+}
+.frame{
+	width: 100vw;
+	height: 100%;
+	outline: 1px solid red;
+	flex-shrink: 0;
 }
