--- a/styles/color_shadows.css
+++ b/styles/color_shadows.css
@@ -20,6 +20,8 @@
 	}
 }
 .logo_wrapper{
+	height: 150px;
+	width: 150px;
 	height: 200px;
 	width: 200px;
 	perspective: 1px;
@@ -31,6 +33,7 @@
 }
 .logo_wrapper>svg{
 	position: absolute;
+	left: 0px;
 	height: 100%;
 	width: 100%;
 	mix-blend-mode: hard-light;
