--- a/styles/articles.css
+++ b/styles/articles.css
@@ -1,8 +1,18 @@
+.container{
+	display: flex;
+	height: calc(100% - var(--nav_height));
+	transform-style: preserve-3d;
+}
 .frame{
+	width: 100vw;
+	height: 100%;
+	outline: 1px solid red;
+	flex-shrink: 0;
 	display: flex;
 	justify-content: center;
 	align-items: flex-start;
-	overflow: hidden;
+	overflow-x: clip;
+	position: relative;
 }
 article{
 	margin: 10vw;
@@ -10,9 +20,14 @@ article{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	justify-content: space-around;
 	max-width: 400px;
-
+	height: calc(100% - 20vw);
 }
 article>*{
-	display: inline-block;
+	position: relative;
+}
+article p{
+	z-index: 2;
+	text-shadow: 0px 0px 1px black;
 }
