--- a/styles/articles.css
+++ b/styles/articles.css
@@ -1,10 +1,10 @@
 .container{
 	display: flex;
-	height: calc(100% - var(--nav_height));
+	height: 100%;
 	transform-style: preserve-3d;
 }
 .frame{
-	width: 100vw;
+	min-width: 100vw;
 	height: 100%;
 	outline: 1px solid red;
 	flex-shrink: 0;
@@ -16,12 +16,12 @@
 }
 article{
 	margin: 10vw;
+	width: calc(100vw - 20vw);
 	text-align: center;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: space-around;
-	max-width: 400px;
 	height: calc(100% - 20vw);
 }
 article>*{
@@ -31,3 +31,4 @@ article p{
 	z-index: 2;
 	text-shadow: 0px 0px 1px black;
 }
+.frame h2, .frame h3{display:none}
