--- a/styles/nav.css
+++ b/styles/nav.css
@@ -53,6 +53,9 @@ nav .socials{
 	z-index: 2;
 	transition: color .2s linear;
 }
+@media screen and (min-width: 769px) {
+	#mobile_nav{display: none;}
+}
 #mobile_nav div{
 	transform: scale(2.5);
 	font-weight: thin;
