--- a/styles/articles.css
+++ b/styles/articles.css
@@ -6,13 +6,18 @@
 .frame{
 	min-width: 100vw;
 	height: 100%;
-	outline: 1px solid red;
 	flex-shrink: 0;
+	display: flex;
+	flex-direction: column;
+	
+	overflow: clip;
+	position: relative;
+}
+.frame>div{
+	flex-grow: 1;
 	display: flex;
 	justify-content: center;
 	align-items: flex-start;
-	overflow-x: clip;
-	position: relative;
 }
 article{
 	margin: 10vw;
@@ -32,3 +37,15 @@ article p{
 	text-shadow: 0px 0px 1px black;
 }
 .frame h2, .frame h3{display:none}
+
+@media screen and (min-width: 769px) {
+	.container{
+		display: initial;
+	}
+	.frame{
+		height: initial;
+		min-height: 80vh;
+	}
+	.frame h2, .frame h3{display:initial; padding: 0px 15px}
+
+}
